--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <base href="./" />
+
     <title>{{page.title}} | GitarrenunterrichtInEimsbuettel</title>
 
     <meta charset="utf-8">
