--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,18 +11,18 @@
     <meta name="robots" content="{{page.robot_tags}}">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="shortcut icon" href="/assets/icon.ico" />
+    <link rel="shortcut icon" href="assets/icon.ico" />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/bootstrap.css" />
-    <link rel="stylesheet" href="/css/camera.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/camera.css" />
 
-    <link rel="stylesheet" href="/fonts/amadeus/style.css">
-    <link rel="stylesheet" href="/fonts/sourcesans/stylesheet.css">
-    <link rel="stylesheet" href="/fonts/cabin/stylesheet.css">
-    <link rel="stylesheet" href="/fonts/dejavuserif/stylesheet.css">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="fonts/amadeus/style.css">
+    <link rel="stylesheet" href="fonts/sourcesans/stylesheet.css">
+    <link rel="stylesheet" href="fonts/cabin/stylesheet.css">
+    <link rel="stylesheet" href="fonts/dejavuserif/stylesheet.css">
+    <link rel="stylesheet" href="css/style.css" />
 
 </head>
 
