--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,16 +58,16 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mehr Erfahren&nbsp;<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/location.html">Location</a></li>
-                            <li><a href="/unterricht.html">Unterricht</a></li>
-                            <li><a href="/technik.html">Technik</a></li>
-                            <li><a href="/person.html">Zur Person</a></li>
+                            <li><a href="location.html">Location</a></li>
+                            <li><a href="unterricht.html">Unterricht</a></li>
+                            <li><a href="technik.html">Technik</a></li>
+                            <li><a href="person.html">Zur Person</a></li>
                         </ul>
                     </li>
-                    <li><a href="/sounds.html">Hörprobe</a></li>
+                    <li><a href="sounds.html">Hörprobe</a></li>
                     <!--<li><a href="/person.html#">Zur Person</a></li>-->
-                    <li><a href="/kosten.html#">Preise</a></li>
-                    <li><a href="/kontakt.html#">Kontakt</a></li>
+                    <li><a href="kosten.html#">Preise</a></li>
+                    <li><a href="kontakt.html#">Kontakt</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="tag_tel"></li>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <a href="/impressum.html#">Impressum</a>
+                    <a href="impressum.html#">Impressum</a>
                 </div>
                 <div class="col-md-4">
                     ©2015 Bernhard Welling
@@ -100,11 +100,11 @@
     </footer>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="/js/bootstrap.js"></script>
-    <script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="/js/jquery.mobile.customized.min.js"></script>
-    <script type="text/javascript" src="/js/camera.js"></script>
-    <script type="text/javascript" src="/js/pagescript.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="js/jquery.mobile.customized.min.js"></script>
+    <script type="text/javascript" src="js/camera.js"></script>
+    <script type="text/javascript" src="js/pagescript.js"></script>
 
 </body>
 </html>
