--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/#">
+                <a class="navbar-brand" href="#">
                     <!-- <span><img class="icon" alt="Brand" src="/assets/icon.ico"></span> -->
                     Bernhard Welling
                 </a>
