--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,9 +48,9 @@
                     <li><a href="location.html">Location</a></li>
                     <li><a href="unterricht.html">Unterricht</a></li>
                     <li><a href="technik.html">Technik</a></li>
+                    <li><a href="kosten.html">Kosten</a></li>
                     <li><a href="person.html">Zur Person</a></li>
-                    <li><a href="kosten.html#">Kosten</a></li>
-                    <li><a href="kontakt.html#">Kontakt</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">       
                 </ul>
