--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,89 +1,89 @@
 .navbar-default {
-  background-color: #00074b;
-  border-color: #4a53a5;
+  background-color: #ffffff;
+  border-color: #bbbbbb;
 }
 .navbar-default .navbar-brand {
-  color: #ffffff;
+  color: #333333;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #2935a5;
+  color: #333333;
 }
 .navbar-default .navbar-text {
-  color: #ffffff;
+  color: #333333;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #ffffff;
+  color: #333333;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #2935a5;
+  color: #333333;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu {
-  background-color: #00074b;
+  background-color: #ffffff;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a {
-  color: #ffffff;
+  color: #333333;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-  color: #2935a5;
-  background-color: #4a53a5;
+  color: #333333;
+  background-color: #bbbbbb;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
-  background-color: #4a53a5;
+  background-color: #bbbbbb;
 }
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-  color: #2935a5;
-  background-color: #4a53a5;
+  color: #333333;
+  background-color: #bbbbbb;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #2935a5;
-  background-color: #4a53a5;
+  color: #333333;
+  background-color: #bbbbbb;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  color: #2935a5;
-  background-color: #4a53a5;
+  color: #333333;
+  background-color: #bbbbbb;
 }
 .navbar-default .navbar-toggle {
-  border-color: #4a53a5;
+  border-color: #bbbbbb;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #4a53a5;
+  background-color: #bbbbbb;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #ffffff;
+  background-color: #333333;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #ffffff;
+  border-color: #333333;
 }
 .navbar-default .navbar-link {
-  color: #ffffff;
+  color: #333333;
 }
 .navbar-default .navbar-link:hover {
-  color: #2935a5;
+  color: #333333;
 }
 
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #ffffff;
+    color: #333333;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #2935a5;
+    color: #333333;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #2935a5;
-    background-color: #4a53a5;
+    color: #333333;
+    background-color: #bbbbbb;
   }
 }
