--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,10 @@ body{
     padding-top: 51px;
     padding-bottom: 120px;
 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rubik', sans-serif;
+}
+p {
+    font-family: 'Open Sans', sans-serif;
 }
 
 article {
@@ -25,12 +28,26 @@ article {
 
 footer{
     padding: 20px 0px 20px 0px;
-
-    color: #ffffff;
-    background-color: #00074b;
 }
 footer p{
     margin: 0;
+}
+
+.jumbotron-index {
+    color: white;
+
+    background-image: url(../assets/images/entspannteAtmosphaere.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: center;
+}
+.jumbotron-index .color {
+    line-height: normal;
+    /*background-color: rgba(103, 41, 0, 0.9);*/
+    /*padding-left: 5px;
+    padding-right: 5px;*/
+    
 }
 
 .index {
