--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/navbar.css" />
 
-    <link href="https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700,800,900|Quicksand:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Oxygen:300,400,700|Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 
 </head>
 
