--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="css/pgwslider.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/pgwslideshow@2.0.0/pgwslideshow.min.css,npm/pgwslideshow@2.0.0/pgwslideshow_light.min.css" />
     
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Oxygen:300,400,700|Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 
@@ -38,8 +38,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <!-- <span><img class="icon" alt="Brand" src="/assets/icon.ico"></span> -->
-                    Bernhard Welling
+                    <!-- <img src="/assets/icon.ico" width="30" height="30" class="d-inline-block align-top" alt=""> -->
+                    <b>Bernhard Welling</b>
                 </a>
             </div>
 
