progress & switch to google fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,8 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/camera.css" />
 
-    <link rel="stylesheet" href="fonts/amadeus/style.css">
-    <link rel="stylesheet" href="fonts/sourcesans/stylesheet.css">
-    <link rel="stylesheet" href="fonts/cabin/stylesheet.css">
-    <link rel="stylesheet" href="fonts/dejavuserif/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin:400,400i,500,500i,600,600i,700,700i|Roboto+Slab:100,300,400,700" rel="stylesheet">
+    
     <link rel="stylesheet" href="css/style.css" />
 
 </head>
@@ -55,8 +53,7 @@
                     <li><a href="unterricht.html">Unterricht</a></li>
                     <li><a href="technik.html">Technik</a></li>
                     <li><a href="person.html">Zur Person</a></li>
-                    <li><a href="sounds.html">Hörprobe</a></li>
-                    <!--<li><a href="/person.html#">Zur Person</a></li>-->
+                    <!--<li><a href="sounds.html">Hörprobe</a></li>-->
                     <li><a href="kosten.html#">Kosten</a></li>
                     <li><a href="kontakt.html#">Kontakt</a></li>
                 </ul>
@@ -71,6 +68,8 @@
     <article>
         {{ content }}
     </article>
+
+    <div style="height:80px"></div>
 
     <footer>
         <div class="container">
