--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
                         </ul>
                     </li>-->
                     <li><a href="location.html">Location</a></li>
-                    <li><a href="unterricht.html">Unterricht</a></li>
+                    <li><a href="gitarrenunterricht.html">Gitarrenunterricht</a></li>
                     <li><a href="technik.html">Technik</a></li>
                     <li><a href="person.html">Zur Person</a></li>
                     <!--<li><a href="sounds.html">Hörprobe</a></li>-->
