--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,400i,500,500i,600,600i,700,700i|Roboto+Slab:100,300,400,700" rel="stylesheet">
     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/default-skin/default-skin.min.css" integrity="sha256-kQW7k22C0skJMSPxgEI2VHR0LPHeygi8SRYNvV/DB2w=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.css" integrity="sha256-rlldBDOCxqXAE1fRopHG2SqpgWisq17/3Oleo+1CBKo=" crossorigin="anonymous" />
+
     <link rel="stylesheet" href="css/style.css" />
 
+
+    
 </head>
 
 <body>
@@ -75,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <a href="impressum.html#">Impressum</a>
+                    <a href="impressum.html#">Impressum & Datenschutzerklärung</a>
                 </div>
                 <div class="col-md-4">
                     ©2018 Bernhard Welling
@@ -92,6 +97,8 @@
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/jquery.mobile.customized.min.js"></script>
     <script type="text/javascript" src="js/camera.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.js" integrity="sha256-iG1tiE5xJSJQhKdeOW4cPiSy+RTrnRKjjjrVQ0hexug=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe-ui-default.min.js" integrity="sha256-XvSk6Opq7XZ8oUcx213MtikXtbl5bbe4Q9tr4+NJBCg=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/pagescript.js"></script>
     
     <script async defer
