--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/camera.css" />
 
+    <link rel="stylesheet" href="css/bootstrap-theme-modified.css" />
+    
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,400i,500,500i,600,600i,700,700i|Roboto+Slab:100,300,400,700" rel="stylesheet">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/default-skin/default-skin.min.css" integrity="sha256-kQW7k22C0skJMSPxgEI2VHR0LPHeygi8SRYNvV/DB2w=" crossorigin="anonymous" />
@@ -166,7 +168,7 @@
     <script type="text/javascript" src="js/camera.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.js" integrity="sha256-iG1tiE5xJSJQhKdeOW4cPiSy+RTrnRKjjjrVQ0hexug=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe-ui-default.min.js" integrity="sha256-XvSk6Opq7XZ8oUcx213MtikXtbl5bbe4Q9tr4+NJBCg=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/PhotoswipeGalleryInitialization.js"></script>
+    <script type="text/javascript" src="js/photoswipeGalleryInitialization.js"></script>
     <script type="text/javascript" src="js/pagescript.js"></script>
     
     <script async defer
