--- a/css/bootstrap-theme-modified.css
+++ b/css/bootstrap-theme-modified.css
@@ -1,6 +1,6 @@
 .navbar-default {
-    background-color: #ffffff;
-    border-color: #707070;
+    background-color: white;
+    border-color: transparent;
   }
   .navbar-default .navbar-brand {
     color: #333333;
@@ -52,7 +52,7 @@
     background-color: #707070;
   }
   .navbar-default .navbar-toggle {
-    border-color: #707070;
+    border-color: transparent;
   }
   .navbar-default .navbar-toggle:hover,
   .navbar-default .navbar-toggle:focus {
@@ -63,7 +63,7 @@
   }
   .navbar-default .navbar-collapse,
   .navbar-default .navbar-form {
-    border-color: #333333;
+    border-color: transparent;
   }
   .navbar-default .navbar-link {
     color: #333333;
