--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ footer{
     margin-bottom: 100px;
     color: white;
 
-    text-shadow: 0px 0px 8px black;
+    /*text-shadow: 0px 0px 8px black;*/
 
     text-align: center;
     /*background-color: rgba(219, 205, 0, 1);
