--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ complementary2: #db4802
 */
 
 body{
-    padding-top: 50px;
+    /*padding-top: 50px;*/
 
     text-align: left;
 
@@ -122,13 +122,16 @@ footer{
 }
 
 .jumbotron{
-    background-image: url("../assets/images/location/3.png");
+    background-image: linear-gradient(
+        rgba(0, 128, 148, 0.5),
+        rgba(0, 128, 148, 0.5)
+      ),url("../assets/images/location/3.png");
     background-position: center;
     background-size: cover;
     margin-bottom: 100px;
     color: white;
 
-    /*text-shadow: 0px 0px 8px black;*/
+    /*text-shadow: 0px 0px 8px #333333;*/
 
     text-align: center;
     /*background-color: rgba(219, 205, 0, 1);
@@ -143,6 +146,14 @@ footer{
 .jumbotron h2{
     font-family: 'Cabin', sans-serif;
     font-weight: 500;
+}
+#jumbotron-main {
+    /*background-image: linear-gradient(
+        rgba(0, 128, 148, 0.5),
+        rgba(0, 128, 148, 0.5)
+      ),url("../assets/images/location/3.png");
+
+      color: white;*/
 }
 #jumbotron-main-inner {
     text-align: left;
