--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -18,25 +18,37 @@
             <img class="full_width" src="assets/images/gallery_main/3.png">
         </div>
     </div>
-
-    <hr class="line-splitter">
-
-    <div class="row small-image-row margin-top-elements-in-row">
-        <div class="col-md-3">
-            <img src="assets/images/technik/1.png">
-            <p>Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung.</p>
-        </div>
-        <div class="col-md-3">
-            <img src="assets/images/technik/2.jpg">
-            <p>Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.</p>
-        </div>
-        <div class="col-md-3">
-            <img src="assets/images/technik/3.jpg">
-            <p>Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</p>
-        </div>
-        <div class="col-md-3">
-            <img src="assets/images/technik/4.jpg">
-            <p>Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.</p>
-        </div>
-    </div>
 </div>
+
+<hr class="line-splitter">
+
+<div class="my-gallery rowcount_1" itemscope itemtype="http://schema.org/ImageGallery">
+    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+        <a href="./assets/images/technik/1.png" itemprop="contentUrl" data-size="1920x1080">
+            <img src="./assets/images/technik/1.png" itemprop="thumbnail" alt="Image description" />
+        </a>
+        <figcaption itemprop="caption description">Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung.</figcaption>
+    </figure>
+
+    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+        <a href="./assets/images/technik/2.jpg" itemprop="contentUrl" data-size="1920x1080">
+            <img src="./assets/images/technik/2.jpg" itemprop="thumbnail" alt="Image description" />
+        </a>
+        <figcaption itemprop="caption description">Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.</figcaption>
+    </figure>
+
+    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+        <a href="./assets/images/technik/3.jpg" itemprop="contentUrl" data-size="1920x1080">
+            <img src="./assets/images/technik/3.jpg" itemprop="thumbnail" alt="Image description" />
+        </a>
+        <figcaption itemprop="caption description">Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</figcaption>
+    </figure>
+
+    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+        <a href="./assets/images/technik/4.jpg" itemprop="contentUrl" data-size="1920x1080">
+            <img src="./assets/images/technik/4.jpg" itemprop="thumbnail" alt="Image description" />
+        </a>
+        <figcaption itemprop="caption description">Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.</figcaption>
+    </figure>
+</div>
+<div style="clear: both;"></div>
