--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
         {{ content }}
     </article>
 
-    <div style="height:80px"></div>
+    <!-- <div style="height:80px"></div> -->
 
     <footer>
         <div class="container">
