--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -6,16 +6,35 @@
 </div>
 
 <div class="container text-left">
+    <div class="row center-text">
+        <div class="col-md-2 col-md-offset-1">
+            <h3>Klassische Gitarre</h3>
+        </div>
+        <div class="col-md-2">
+            <h3>Fingerstyle</h3>
+        </div>
+        <div class="col-md-2">
+            <h3>Liedbegleitung</h3>
+        </div>
+        <div class="col-md-2">
+            <h3>Rock</h3>
+        </div>
+        <div class="col-md-2">
+            <h3>Pop</h3>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-6">
-            <br>
-            <h2>Klassische Gitarre, Fingerstyle, Liedbegleitung, Rock, Pop</h2><br>
-            <p><b>Gitarrenunterricht für Kinder:</b><br>
+            <p>
+                <b>Gitarrenunterricht für Kinder:</b><br>
 
                 Ich gebe Gitarrenunterricht für Kinder ab dem Schuleintrittsalter. Mit Hilfe einer "Gitarrenschule" werden sie an das Lesen und Umsetzen von Noten herangeführt.
                 Eine Lehrerbegleitung lockert den Unterricht auf. So wird zusammen gespielt und gesungen.<br><br>
-                
-                
+            </p>
+        </div>
+        <div class="col-md-6">
+            <p>
                 <b>Gitarrenunterricht für Jugendliche und Erwachsene:</b><br>
                 
                 Der Unterricht ist schülerzentiert. In einem Vorgespräch versuche ich etwas über die musikalischen Vorlieben und Neigungen des Schülers zu erfahren, um entsprechendes Unterrichtsmaterial anzubieten.
@@ -23,10 +42,19 @@
                 Bei fortgeschrittenen Spielern stimme ich den Unterricht noch stärker auf die individuellen Fähigkeiten und Bedürfnisse ab.
                 Musiktheorie lasse ich in den Unterricht "einfließen".<br><br>
                 
-                Der Gitarrenunterricht ist von der Kulturbehörde als Berufs- bzw. Prüfungsvorbereitend anerkannt.</p>
+                Der Gitarrenunterricht ist von der Kulturbehörde als Berufs- bzw. Prüfungsvorbereitend anerkannt.
+            </p>
+        </div>
+    </div>
+
+    <!-- <div class="row">
+        <div class="col-md-6">
+            <br>
+            <h2>Klassische Gitarre, Fingerstyle, Liedbegleitung, Rock, Pop</h2><br>
+            
         </div>
         <div class="col-md-6">
             <img class="full_width" src="assets/images/gallery_main/1.png">
         </div>
-    </div>
+    </div> -->
 </div>
