--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -74,3 +74,7 @@
         Es müssen <b>keine</b> 1/2 Jahres- oder Ganzjahresverträge abgeschlossen werden.
     </p>
 </div>
+
+<br>
+<br>
+<h1 style="text-align: center"><a href="/#kontakt">Zum Probetermin</a></h1>
