--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -5,26 +5,33 @@
     </div>
 </div>
 
-<div class="container text-left">
-    <div class="row center-text">
+<!--<p class="center-text">Meine Schwerpunkte sind:</p>-->
+
+<div class="container">
+    <div class="row center-text unterricht-schwerpunkte">
         <div class="col-md-2 col-md-offset-1">
-            <h3>Klassische Gitarre</h3>
+            <img class="previewIcon" src="assets/images/schwerpunkte/spanish-guitar.svg">
+            <div><h3>Klassische Gitarre</h3></div>
         </div>
         <div class="col-md-2">
-            <h3>Fingerstyle</h3>
+                <img class="previewIcon" src="assets/images/schwerpunkte/hand.svg">
+            <div><h3>Fingerstyle</h3></div>
         </div>
         <div class="col-md-2">
-            <h3>Liedbegleitung</h3>
+                <img class="previewIcon" src="assets/images/schwerpunkte/song.svg">
+            <div><h3>Liedbegleitung</h3></div>
         </div>
         <div class="col-md-2">
-            <h3>Rock</h3>
+                <img class="previewIcon" src="assets/images/schwerpunkte/rock.svg">
+            <div><h3>Rock</h3></div>
         </div>
         <div class="col-md-2">
-            <h3>Pop</h3>
+                <img class="previewIcon" src="assets/images/schwerpunkte/microphone-with-wire.svg">
+            <div><h3>Pop</h3></div>
         </div>
     </div>
 
-    <div class="row">
+    <!--<div class="row">
         <div class="col-md-6">
             <p>
                 <b>Gitarrenunterricht für Kinder:</b><br>
@@ -45,7 +52,7 @@
                 Der Gitarrenunterricht ist von der Kulturbehörde als Berufs- bzw. Prüfungsvorbereitend anerkannt.
             </p>
         </div>
-    </div>
+    </div>-->
 
     <!-- <div class="row">
         <div class="col-md-6">
@@ -57,4 +64,58 @@
             <img class="full_width" src="assets/images/gallery_main/1.png">
         </div>
     </div> -->
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <b>Gitarrenunterricht für Kinder: (Zum öffnen klicken)</b>
+                    </a>
+                    </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="panel-body">
+                        <p>
+                            Ich gebe Gitarrenunterricht für Kinder ab dem Schuleintrittsalter. Mit Hilfe einer "Gitarrenschule" werden sie an das Lesen und Umsetzen von Noten herangeführt.
+                            Eine Lehrerbegleitung lockert den Unterricht auf. So wird zusammen gespielt und gesungen.<br><br>
+                        </p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingTwo">
+                    <h4 class="panel-title">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <b>Gitarrenunterricht für Jugendliche und Erwachsene: (Zum öffnen klicken)</b>
+                        </a>
+                    </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div class="panel-body">
+                        <p>
+                            Der Unterricht ist schülerzentiert. In einem Vorgespräch versuche ich etwas über die musikalischen Vorlieben und Neigungen des Schülers zu erfahren, um entsprechendes Unterrichtsmaterial anzubieten.
+                            Bei Anfängern geht es darum "Basics" zu erlernen. Eine gute Technik ist u.a. Voraussetzung, sich in den verschiedenen Musikstilen zurechtzufinden und auszudrücken. Zum Start bieten sich meistens zwei Möglichkeiten an: Liedbegleitung nach Akkorden, oder Melodiespiel nach Noten.
+                            Bei fortgeschrittenen Spielern stimme ich den Unterricht noch stärker auf die individuellen Fähigkeiten und Bedürfnisse ab.
+                            Musiktheorie lasse ich in den Unterricht "einfließen".<br><br>
+                            
+                            Der Gitarrenunterricht ist von der Kulturbehörde als Berufs- bzw. Prüfungsvorbereitend anerkannt.
+                        </p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
