--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -9,7 +9,7 @@
     <div class="row margin-top-elements-in-row ">
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_probezeit.svg">
-            <h3>Kostenloser Kennlerntermin</h3>
+            <h3>Unverbindlicher Kennlerntermin</h3>
             <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>-->
         </div>
         <div class="col-md-4">
