--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -12,22 +12,27 @@
         <div class="col-md-2 col-md-offset-1">
             <img class="previewIcon" src="assets/images/schwerpunkte/spanish-guitar.svg">
             <div><h3>Klassische Gitarre</h3></div>
+            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Klassische Gitarre" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
         </div>
         <div class="col-md-2">
-                <img class="previewIcon" src="assets/images/schwerpunkte/hand.svg">
+            <img class="previewIcon" src="assets/images/schwerpunkte/hand.svg">
             <div><h3>Fingerstyle</h3></div>
+            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Fingerstyle" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
         </div>
         <div class="col-md-2">
-                <img class="previewIcon" src="assets/images/schwerpunkte/song.svg">
+            <img class="previewIcon" src="assets/images/schwerpunkte/song.svg">
             <div><h3>Liedbegleitung</h3></div>
+            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Liedbegleitung" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
         </div>
         <div class="col-md-2">
-                <img class="previewIcon" src="assets/images/schwerpunkte/rock.svg">
+            <img class="previewIcon" src="assets/images/schwerpunkte/rock.svg">
             <div><h3>Rock</h3></div>
+            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Rock" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
         </div>
         <div class="col-md-2">
-                <img class="previewIcon" src="assets/images/schwerpunkte/microphone-with-wire.svg">
+            <img class="previewIcon" src="assets/images/schwerpunkte/microphone-with-wire.svg">
             <div><h3>Pop</h3></div>
+            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Pop" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
         </div>
     </div>
 
