--- a/css/style.css
+++ b/css/style.css
@@ -298,3 +298,23 @@ a.anchor {
     top: -51px;
     visibility: hidden;
 }
+
+.unterricht-schwerpunkte h3 {
+    height: auto;
+}
+
+@media (min-width: 992px) {
+    .unterricht-schwerpunkte h3 {
+        height: 51px;
+    }
+}
+
+.unterricht-schwerpunkte a{
+    margin-bottom: 35px;
+}
+
+@media (min-width: 992px){
+    .unterricht-schwerpunkte a{
+        margin-bottom: 0;
+    }
+}
