--- a/_includes/location.html
+++ b/_includes/location.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-md-6">
             <br>
-            <h2>Location</h2>
+            <h2>Unterrichtsort</h2>
             <p>Der Unterrichtsort befindet sich in einer ruhigen Seitenstraße unweit der U-Bahn Osterstraße (Karte unter <a href="kontakt.html#gmapsElement">Kontakt</a>).</p>
         </div>
         <div class="col-md-6">
