--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -9,13 +9,13 @@
     <div class="row">
         <div class="col-md-6">
             <br>
-            <h2>Technik</h2>
+            <!-- <h2>Technik</h2> -->
             <p>Die Technik dient unter anderem dazu, die Musikinhalte des Gitarrenunterrichts an das Spielvermögen des Schülers anzupassen. 
                 Dafür ist ein Wave-Editor vorhanden, mit dem Audioschleifen in verschiedenen Geschwindigkeiten und (wenn nötig) in unterschiedlichen Tonhöhen erzeugt werden können. So kann der Schüler mitspielend üben.
                 </p>
         </div>
         <div class="col-md-6">
-            <img class="full_width" src="assets/images/gallery_main/3.png">
+            <img class="full_width" src="assets/images/technik/technik.jpg">
         </div>
     </div>
 </div>
