--- a/_includes/person.html
+++ b/_includes/person.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img class="full_width" style="margin-top:80px" src="assets/images/person.jpg">
+            <img class="full_width" src="assets/images/person/person_art.jpg">
         </div>
     </div>
 </div>
