--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,9 @@
                         <ul class="dropdown-menu">
                         </ul>
                     </li>-->
+
+                    <li><a href="#start">Start</a></li>
+
                     {% for hash in site.data.pages %}
                         {% assign pageentry = hash[1] %}
                         
