--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -77,4 +77,4 @@
 
 <br>
 <br>
-<h1 style="text-align: center"><a href="/#kontakt">Zum Probetermin</a></h1>
+<h1 style="text-align: center"><a href="#kontakt">Zum Probetermin</a></h1>
