--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav id="thenavbar" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="">
                     <!-- <span><img class="icon" alt="Brand" src="/assets/icon.ico"></span> -->
                     Bernhard Welling
                 </a>
